Remove Security Manager-dependent test paths (#8391)